# AfricaOS

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md
core/: Cargo.toml  DockerfileAOS  DockerfileAlice  DockerfileBob  DockerfileCici  Makefile  README.md
core/block/: Cargo.toml
core/block/src/: lib.rs
core/cryptoutil/: Cargo.toml
core/cryptoutil/src/: lib.rs
core/db/: Cargo.toml
core/db/src/: lib.rs
core/encode/: Cargo.toml
core/encode/src/: lib.rs
core/executor/: Cargo.toml
core/executor/src/: lib.rs
core/hash/: Cargo.toml
core/hash/src/: lib.rs
core/lock/: Cargo.toml
core/lock/src/: lib.rs
core/macros/: Cargo.toml
core/macros/src/: lib.rs
core/network/: Cargo.toml
core/network/src/: lib.rs
core/node/: Cargo.toml
core/node/src/: lib.rs
core/proposal/: Cargo.toml
core/proposal/src/: lib.rs
core/signature/: Cargo.toml
core/signature/keys/: Makefile  private.der  private.pem  public.der  public.pem
core/signature/src/: lib.rs
core/src/: Cargo.toml  main.rs
core/storage/: chain.db  proposals.db  states.db  transactions.db
core/storage/state/: state_0.prop
core/timestamp/: Cargo.toml
core/timestamp/src/: lib.rs
core/transaction/: Cargo.toml
core/transaction/src/: lib.rs
