[package]
name = "core"
version = "0.1.0"
authors = ["jovonnipharr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
node = { path = "node" }

proposal = { path = "proposal" }
block = { path = "block" }
timestamp = { path = "timestamp" }
json = "*"
hash = { path = "hash" }
network = { path = "network" }
