[package]
name = "block"
version = "0.1.0"
authors = ["jovonnipharr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
timestamp = { path = "../timestamp" }
db = { path = "../db" }
transaction = { path = "../transaction" }
hash = { path = "../hash" }
