[package]
name = "network"
version = "0.1.0"
authors = ["jovonnipharr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
reqwest = "0.9.22"
proposal = { path = "../proposal" }
encode = { path = "../encode" }
transaction = { path = "../transaction" }

url = "2.1.0"
