[package]
name = "node"
version = "0.1.0"
authors = ["jovonnipharr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network = { path = "../network" }
transaction = { path = "../transaction" }
db = { path = "../db"}
proposal = { path = "../proposal"}
block = { path = "../block"}
json = "*"
