[package]
name = "transaction"
version = "0.1.0"
authors = ["jovonnipharr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
db = { path = "../db" }
timestamp = { path = "../timestamp" }
hash = { path = "../hash" }
encode = { path = "../encode" }
